# mmap-wrapper

./: Cargo.toml  README.md
src/: backend.rs  lib.rs  memmap2.rs  no_std.rs
src/backend/: memmap2.rs  no_std.rs
